--- a/kus-uslugi/src/styles/form_button.css
+++ b/kus-uslugi/src/styles/form_button.css
@@ -1,9 +1,29 @@
 .form-button {
     margin: 10px;
-    padding: 15px;
+    padding: 1em 1.5em 1em;
     border-radius: 20px;
-    font-size: 1em;
-    border: #0065b1 solid 3px;
+    border: none;
 
     z-index: 400;
+
+    transition: all 300ms ease;
+
+    font-size: 1.2em;
+}
+
+.form-button:hover {
+    transform: scale(1.05);
+    transition: all 300ms ease;
+
+    background: rgb(0,101,177);
+    background: linear-gradient(135deg, rgb(0, 24, 177) 0%, rgb(45, 0, 161) 100%);
+    color: white;
+
+
+
+}
+
+.form-button:active {
+    transform: scale(0.9);
+    transition: all 300ms ease;
 }
