--- a/kus-uslugi/src/styles/main.css
+++ b/kus-uslugi/src/styles/main.css
@@ -7,6 +7,7 @@
 main {
     font-family: "Lato-normal", sans-serif;
     background-color: #fafcff;
+    scroll-behavior: smooth;
 }
 
 .main-body {
